Update FilmService.java